--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "react-github-actions",
   "version": "0.1.0",
+  "homepage": "https://c0llinn.github.io/react-github-actions",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
